fixed professional work spacing issue

--- a/src/components/ProjectCard/projectcard.css
+++ b/src/components/ProjectCard/projectcard.css
@@ -1,3 +1,38 @@
-.project-img {
-    width: 300px;
+
+.wrapper-a {
+    justify-content: center;
+    flex-wrap: wrap;
+
+    margin: 5px;
 }
+
+.card {
+    overflow: hidden;
+    /* box-shadow: 0 2px 10px grey; */
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* cursor: pointer; */
+    transition: transform 200ms ease-in;
+    margin: 10px;
+}
+
+.project-img {
+    height: 12rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.project-title {
+    padding: 1rem;
+}
+
+.project-desc {
+    padding: 0 1rem;
+}
+
+
+/* .project-img:hover {
+    transform: scale(1.02);
+} */
